--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Ponemos un icono para el navegador  -->
   <link rel="shortcut icon"  href='images/BowIco.png' >
   <!-- Definimos  el Estilo de la pagina  -->
-  <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <link rel="stylesheet" type="text/css" href="estilo.css">
   <!-- Definimos  el path del script modernizr -->
   <script src="js/modernizr.js"></script>
 
